fix: Подключился к БД и Сделал генерацию токенов
